--- a/compose.yaml
+++ b/compose.yaml
@@ -22,6 +22,13 @@ services:
     ports:
       - 3000:3000
 
+    volumes:
+      - .:/app
+      - /app/node_modules  # Preserve node_modules inside container.
+
+    # Overwrite the default CMD from the Dockerfile.
+    command: sh -c "npm install && npm run dev"
+
     develop:
       # Any files mentioned here will cause an action in the container when edited on the dev machine.
       watch:
