--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "heroicons": "^2.2.0",
     "mongodb": "^6.10.0",
     "next": "^15.3.0",
     "next-auth": "^4.24.11",
