--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "heroicons": "^2.2.0",
+    "lucide-react": "^0.488.0",
     "mongodb": "^6.10.0",
     "next": "^15.3.0",
     "next-auth": "^4.24.11",
